# gladys

./: .gitlab-ci.yml  .robotpkg.sh  .travis.bash  .travis.yml  CMakeLists.txt  README  README.md
CMakeModules/: FindGDAL.cmake  FindPythonLibs.cmake
demo/: CMakeLists.txt  gladys_demo.cpp  robot.json
doc/: gdal_cheats
include/gladys/: bresenham.hpp  cache.hpp  display.hpp  dstar.hpp  frontier_exploration.hpp  gdal.hpp  gladys.hpp  graph_astar.hpp  nav_graph.hpp  point.hpp  robot_model.hpp  visibility_map.hpp  weight_map.hpp
python/: CMakeLists.txt  __init__.py  gdalcustom.py  gladys.py  gladys_display.py  gladys_python.cpp  gladysconv  gladysdrawpoints  gladysplay  gladyspoints  gladyspom
src/: CMakeLists.txt  bresenham.cpp  display.cpp  dstar.cpp  frontier_exploration.cpp  gdal.cpp  gdal_float_rgb.cpp  gladys.cpp  gladys_python.cpp  nav_graph.cpp  region_graph.cpp  region_weight.cpp  visibility_map.cpp  weight_map.cpp
src/main/: region_from_rgba.cpp  region_graph.cpp  region_weight.cpp
test/: CMakeLists.txt  bench_areas.cpp  bench_visibility.cpp  test_bresenham.cpp  test_cache.cpp  test_dstar.cpp  test_frontier.cpp  test_gdal.cpp  test_gladys.cpp  test_gladys.py  test_visibility.cpp
tools/: disputm.py  dot_to_json.py  eurasample.py  gdal_float_rgb.py  gdal_points.py
